# sphinx-docs-test

./: .buildinfo  .gitignore  README.rst  index.html  objects.inv  searchindex.js  setup.cfg
.doctrees/: environment.pickle  index.doctree  sphinx_docs_test.doctree
.github/workflows/: documentation.yml  tests.yml
docs/: conf.py  index.rst  sphinx_docs_test.rst
docs/source/: conf.py  index.rst
genindex/: index.html
py-modindex/: index.html
search/: index.html
sphinx_docs_test/: arith.py  index.html  list.py
test/: test_arith.py  test_list.py
