[metadata]
name = sphinx_docs_test
version = 0.1.0
description = Use gists as modules.
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
author = Divya Jain
author_email = dkj@somaiya.edu
url = https://github.com/divykj/sphinx_docs_test
download_urls = https://pypi.org/project/sphinx_docs_test
project_urls =
	Documentation = https://divykj.github.io/sphinx_docs_test
	Code = https://github.com/divykj/sphinx_docs_test
	Issue tracker = https://github.com/divykj/sphinx_docs_test/issues

[options]
packages =
    sphinx_docs_test

[options.extras_require]
test=
	pytest
docs = 
    sphinx
